tests/fixtures/errors/null-access/src/main.ts
const obj: any = null;
const value = obj.property; // Will throw at runtime
console.log(value);